tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-numeric-index/expected.err
Error: invalid index on symbolic subscript array 'foo'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-numeric-index/input.k65:6:12 ]
   │
 6 │     lda foo[1]
   │            ─┬─  
   │             ╰─── aggregate index without repeat count
   │ 
   │ Help: `foo[index]` selects a repeated element only when `foo` is declared with `* count`; add `* N` to the declaration for element access, or use '.field' or '[.field]' for named field access
   │ 
   │ Note: The `[ ... ]` after a symbolic-subscript var has two meanings: `.field` selects a named field, while numeric indices select repeat elements from `var NAME[...] * N`.
───╯
